<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="117dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/recover_password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/recover_password_description"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/email"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/edit_text_round_corners"
        android:hint="@string/your_email"
        android:padding="10dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="16sp" />


    <Button
        android:id="@+id/resetButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/reset_password"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:backgroundTint="@color/colorPrimaryDark" />

</LinearLayout>